[package]
name = "yew-maze-defence"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "console"
] }
serde = { version = "1", features = ["derive"] }
js-sys = "0.3"
